[gd_scene load_steps=13 format=2]

[ext_resource path="res://titlePage.gd" type="Script" id=1]
[ext_resource path="res://stackathon-assets/background/Hills Layer 01.png" type="Texture" id=2]
[ext_resource path="res://stackathon-assets/titlePage/title.png" type="Texture" id=3]
[ext_resource path="res://stackathon-assets/titlePage/play.png" type="Texture" id=4]
[ext_resource path="res://stackathon-assets/titlePage/playHover.png" type="Texture" id=5]
[ext_resource path="res://stackathon-assets/titlePage/exit.png" type="Texture" id=6]
[ext_resource path="res://stackathon-assets/titlePage/exitHover.png" type="Texture" id=7]
[ext_resource path="res://stackathon-assets/Text/Font/m5x7.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sceneTransition.tscn" type="PackedScene" id=9]
[ext_resource path="res://stackathon-assets/music/Game-Menu_Looping.ogg" type="AudioStream" id=10]
[ext_resource path="res://stackathon-assets/music/select.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="titlePage" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 167.978, 91.8482 )
scale = Vector2( 0.732509, 0.732509 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 15
custom_constants/margin_top = 20
custom_constants/margin_left = 15
custom_constants/margin_bottom = 20
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 91.0
margin_top = 31.0
margin_right = 228.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 25
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 137.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 137.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="start" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_right = 61.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="exit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_right = 132.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 105.0
margin_right = 137.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Created By Wingman Lee"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="sceneTransition" parent="." index="2" instance=ExtResource( 9 )]

color = Color( 0.144531, 0.143402, 0.143402, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 10 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="select" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]

[connection signal="fade_finished" from="sceneTransition" to="." method="_on_sceneTransition_fade_finished"]


[editable path="sceneTransition"]
